[FEATURE]Add account button + insert into database

--- a/PasswordManager/WebApplication/appsettings.json
+++ b/PasswordManager/WebApplication/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "PasswordManager": "Data Source=passwordmanager.database.windows.net;Initial Catalog=PasswordManager;User ID=AKAK;Password=DotnetParty1!;Trusted_Connection=False;Encrypt=True"
+  },
   "AllowedHosts": "*"
 }
